--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "helmet": "^3.20.0",
     "jest": "^24.9.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.2",
     "sqlite3": "^4.1.0",
     "supertest": "^4.0.2"
